--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
 </style>
     </head>
-    <body class="bg-gray-100">What
+    <body class="bg-gray-100">
         <div>
             <!-- Navbar -->
             <div
@@ -35,19 +35,22 @@
 
                     <!-- Desktop Menu -->
                     <ul class="flex space-x-6 hidden md:flex">
-                        <li><a href="#home"
+                        <li><a href="index.html"
                                 class="text-yellow-700 hover:text-black">Home</a></li>
-                        <li><a href="#about"
-                                class="text-yellow-700 hover:text-black">About</a></li>
-                        <li><a href="#student-review"
-                                class="text-yellow-700 hover:text-black">Student
-                                Review</a></li>
-                        <li><a href="#what-will-get"
-                                class="text-yellow-700 hover:text-black">What
-                                Will You Get</a></li>
-                        <li><a href="#what-will-learn"
-                                class="text-yellow-700 hover:text-black">What
-                                Will You Learn</a></li>
+                        <li><a href="#whyThisCourse"
+                                class="text-yellow-700 hover:text-black">Why
+                                This Course</a></li>
+                        <li><a href="#howToStart"
+                                class="text-yellow-700 hover:text-black">Course
+                                Process</a></li>
+                        <li><a href="#CourseInstractor"
+                                class="text-yellow-700 hover:text-black">Course
+                                Instractor</a></li>
+                        <li><a href="#WhyChooseUs"
+                                class="text-yellow-700 hover:text-black">Why
+                                Choose us</a></li>
+                        <li><a href="#FrequentlyAskedQustion"
+                                class="text-yellow-700 hover:text-black">FAQ</a></li>
 
                     </ul>
 
@@ -104,36 +107,44 @@
                                 class="bg-slate-50 p-3 rounded flex gap-2 items-center">
                                 <img src="./Assets/home.png"
                                     class=" h-8 w-8 object-fit" /><a
-                                    href="#about"
+                                    href="#"
                                     class="text-gray-700 hover:text-blue-600 transition-colors duration-300">Home</a></li>
+
                             <li
                                 class="bg-slate-50 p-3 rounded flex gap-2 items-center">
                                 <img src="./Assets/course.png"
-                                    class=" h-8 w-8 object-fit" /><a
-                                    href="#courses"
-                                    class="text-gray-700 hover:text-blue-600 transition-colors duration-300">About
-                                    Courses</a></li>
+                                    class=" h-8 w-8 object-fit" />
+                                <a href="#whyThisCourse"
+                                    class="text-gray-700 hover:text-blue-600 transition-colors duration-300">Why
+                                    This Course
+                                    </a></li>
                             <li
                                 class="bg-slate-50 p-3 rounded flex gap-2 items-center">
-                                <img src="./Assets/review.png"
-                                    class=" h-8 w-8 object-fit" />
-                                <a href="#student-review"
-                                    class="text-gray-700 hover:text-blue-600 transition-colors duration-300">Student
-                                    Review</a></li>
+                                <img src="./Assets/automation.png"
+                                    class=" h-8 w-8 object-fit" /><a
+                                    href="#howToStart"
+                                    class="text-gray-700 hover:text-blue-600 transition-colors duration-300">Course
+                                    Process</a></li>
                             <li
                                 class="bg-slate-50 p-3 rounded flex gap-2 items-center">
                                 <img src="./Assets/whatget.png"
                                     class=" h-8 w-8 object-fit" /><a
-                                    href="#what-will-get"
-                                    class="text-gray-700 hover:text-blue-600 transition-colors duration-300">What
-                                    Will You Get</a></li>
+                                    href="#CourseInstractor"
+                                    class="text-gray-700 hover:text-blue-600 transition-colors duration-300">Course
+                                    Instractor</a></li>
                             <li
                                 class="bg-slate-50 p-3 rounded flex gap-2 items-center">
-                                <img src="./Assets/learn.png"
+                                <img src="./Assets/checklist.png"
                                     class=" h-8 w-8 object-fit" /><a
-                                    href="#what-will-learn"
-                                    class="text-gray-700 hover:text-blue-600 transition-colors duration-300">What
-                                    Will You Learn</a></li>
+                                    href="#WhyChooseUs"
+                                    class="text-gray-700 hover:text-blue-600 transition-colors duration-300">Why
+                                    Choose us</a></li>
+                            <li
+                                class="bg-slate-50 p-3 rounded flex gap-2 items-center">
+                                <img src="./Assets/FAQ.png"
+                                    class=" h-8 w-8 object-fit" /><a
+                                    href="#FrequentlyAskedQustion"
+                                    class="text-gray-700 hover:text-blue-600 transition-colors duration-300">FAQ</a></li>
                         </ul>
                     </div>
 
@@ -211,7 +222,7 @@
             </div>
 
             <!-- Course Summary -->
-            <div class="w-full  mx-auto bg-gray-900 py-8 ">
+            <div id="whyThisCourse" class="w-full  mx-auto bg-gray-900 py-8 ">
                 <h1
                     class="text-2xl md:text-3xl lg:text-5xl text-center text-yellow-600 my-4 font-semibold">
                     কেন আপনি কোর্সটা করবেন? </h1>
@@ -356,7 +367,7 @@
 
             <!-- course process  -->
 
-            <div class="w-full bg-gray-800 p-8">
+            <div id="howToStart" class="w-full bg-gray-800 p-8">
                 <h1
                     class="text-2xl md:text-3xl lg:text-5xl text-center text-yellow-600 my-4 font-semibold">যেভাবে
                     কোর্সটা শুরু করবেন</h1>
@@ -569,7 +580,7 @@
             </div>
 
             <!-- instructors -->
-            <div class="w-full bg-gray-900 py-8">
+            <div id="CourseInstractor" class="w-full bg-gray-900 py-8">
                 <h1
                     class="text-2xl md:text-3xl lg:text-4xl text-center text-yellow-600 font-medium">Course
                     Instractor </h1>
@@ -616,7 +627,7 @@
             </div>
 
             <!-- About Section -->
-            <section id="about" class="py-20 bg-gray-800 text-white">
+            <section id="WhyChooseUs" class="py-20 bg-gray-800 text-white">
                 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                     <div class="text-center">
                         <h2 class="text-3xl font-bold text-yellow-600">কেন
@@ -631,7 +642,7 @@
                         class="mt-10 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
                         <div
                             class="p-6 bg-white rounded-lg shadow flex items-start gap-4">
-                            <img src="./Assets/mentor.png"
+                            <img src="./Assets/whatget.png"
                                 class="w-14 h-14 object-cover shadow" />
                             <div>
                                 <h3
@@ -682,7 +693,8 @@
 
             <!-- Frequently Ask Question  -->
 
-            <div class="w-full bg-gray-900 mx-auto p-8">
+            <div id="FrequentlyAskedQustion"
+                class="w-full bg-gray-900 mx-auto p-8">
                 <h1
                     class="text-2xl md:text-2xl lg:text-5xl text-center text-yellow-600">
                     Frequently Asked Questions
