--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                 <a href="#whyThisCourse"
                                     class="text-gray-700 hover:text-blue-600 transition-colors duration-300">Why
                                     This Course
-                                    </a></li>
+                                </a></li>
                             <li
                                 class="bg-slate-50 p-3 rounded flex gap-2 items-center">
                                 <img src="./Assets/automation.png"
@@ -433,7 +433,7 @@
                             <!-- Modal toggle -->
                             <button data-modal-target="static-modal"
                                 data-modal-toggle="static-modal"
-                                class=" text-yellow-700"
+                                class=" text-yellow-700 bg-white"
                                 type="button">
                                 সঠিক পদ্ধতিতে পেমেন্ট করতে ভিডিও
                                 দেখনু <span
@@ -607,20 +607,6 @@
                                     Chattogram</span>
                                 <span>Ceo of Elite Mart</span>
                             </p>
-
-                            <div class="flex flex-col gap-4  ">
-                                <h1
-                                    class="text-yellow-600 text-2xl font-semibold">
-                                    Education </h1>
-                                <p
-                                    class="text-gray-100 text-base md:text-lg flex flex-col">
-
-                                    <span>B.A. Honurs in Economics from
-                                        Chittagong College</span>
-                                    <span>Masters in Economics
-                                        Chittagong College</span>
-                                </p>
-                            </div>
                         </div>
                     </div>
                 </div>
